Fix misc java 8 issues in tests